--- a/client/app/app.css
+++ b/client/app/app.css
@@ -32,6 +32,7 @@
 }
 
 /* Responsive: Portrait tablets and up */
+/*
 @media screen and (min-width: 768px) {
     .list-body, .edit-body {
         padding-top: 130px;
@@ -40,3 +41,4 @@
         max-width: 730px;
     }
 }
+*/
