--- a/client/app/app.less
+++ b/client/app/app.less
@@ -13,7 +13,7 @@
     url('../bower_components/font-awesome/fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg');
     font-weight: normal;
     font-style: normal;
-}
+} 
 
 /**
  * App-wide Styles
@@ -31,14 +31,27 @@
     border-color: inherited;
 }
 
-/* Responsive: Portrait tablets and up */
-/*
-@media screen and (min-width: 768px) {
-    .list-body, .edit-body {
-        padding-top: 130px;
-    }
-    .container {
-        max-width: 730px;
-    }
+
+.preview {
+	position: absolute;
+	top: 0;
+	left:0;
+	width: 100%;
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+ 	opacity:1;
 }
-*/
+
+.relative {
+	
+	position: relative;
+}
+
+.preview.ng-enter,{
+  opacity:1;
+}
+
+.preview.ng-hide,{
+  opacity:0;
+top: 100vh;
+}
