some minor style changes

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -33,11 +33,12 @@
 
 
 .preview {
+	background-color: green;
 	position: absolute;
 	top: 0;
 	left:0;
 	width: 100%;
-  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -webkit-transition:all linear 0.5s;
   transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
  	opacity:1;
 }
