--- a/client/partials/base-edit.html
+++ b/client/partials/base-edit.html
@@ -1,7 +1,7 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div ng-controller="BaseCtrl">
     <!--This is the header section-->
-    <div ng-class="css('rowFluid')" class="page-header edit-header">
+    <div ng-class="css('rowFluid')" class="edit-header">
         <!--The left hand side contains important fields from the data-->
         <div class="header-lhs col-sm-8 span8">
             
