--- a/client/partials/base-list.html
+++ b/client/partials/base-list.html
@@ -1,6 +1,6 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div ng-controller="BaseCtrl">
-    <div ng-class="css('rowFluid')" class="page-header list-header">
+    <div ng-class="css('rowFluid')" class=" list-header">
         <div class="header-lhs col-sm-8 span8">
             <h1>{{modelNameDisplay}}</h1>
         </div>
