--- a/client/partials/base-list.html
+++ b/client/partials/base-list.html
@@ -1,6 +1,6 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-<div ng-controller="BaseCtrl">
-    <div ng-class="css('rowFluid')" class=" list-header">
+<div class = "container" ng-controller="BaseCtrl">
+    <div ng-class="css('rowFluid')" class="row list-header">
         <div class="header-lhs col-sm-8 span8">
             <h1>{{modelNameDisplay}}</h1>
         </div>
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div ng-class="css('rowFluid')" infinite-scroll="scrollTheList()">
+        <div class="row" infinite-scroll="scrollTheList()">
             <a ng-repeat="record in recordList" ng-href="{{generateEditUrl(record)}}">
                 <div class="list-item">
                     <div ng-class="css('span',12/listSchema.length)" ng-repeat="field in listSchema">{{getListData(record, field.name)}} </div>
