--- a/client/app/preview/preview.less
+++ b/client/app/preview/preview.less
@@ -1,3 +1,12 @@
 woot{
 	backgroung: solid 1px green;
 }
+
+.scenario-card {
+	width:300px;
+	height:500px;
+	background-color:rgba(0,0,0,0.75);
+	border-radius:20px;
+	color:white;
+	padding:20px;
+}
