--- a/client/app/preview/preview.css
+++ b/client/app/preview/preview.css
@@ -1,23 +1,35 @@
 .scenario-card {
-	height:auto;
-	background-color:rgba(0,0,0,0.75);
-	border-radius:20px;
+	height:415px;
+	/*border-radius:20px;
+  background-color:rgba(35,103,135,0.15);*/
+  background-color:rgba(0,0,0,0.08);
 	color:white;
 	padding:20px;
 	margin:10px;
+
+
+}
+
+.scenario-card h3 {
+  font-family: '232MKB';
+}
+
+.scenario-card p {
+  font-family: '232MKUL';
 }
 
 @charset "UTF-8";
 
 @font-face {
-  font-family: '232MKSD';
-  src: url('../fonts/232MKSD_winTT/232MKB__.TTF') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  font-family: '232MKB';
+  src: url('../../assets/fonts/232MKSD_winTT/232MKB__.TTF') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
-
-div#test {
-	
+@font-face {
+  font-family: '232MKUL';
+  src: url('../../assets/fonts/232MKSD_winTT/232MKUL_.TTF') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
 body {
@@ -28,7 +40,7 @@ body {
 div#main {
 	postition:relative;
 	width:1920px;
-	height:1200px;	
+	height:1200px;
 	background:url("../../bmp/gulfclear.jpg") no-repeat;
 }
 div#perspective_plane_container {
@@ -52,11 +64,11 @@ div#perspective_plane {
 	to { -webkit-transform: rotateX(70deg); }
 }
 
-	
+
 div#hexMatrix {
 	background:url("../../svg/hex1.svg") 50% 50% / 10% 10% ;
 	width:1920px;
-	height:1200px;	
+	height:1200px;
 	opacity:.1;
 	z-index:0;
 
@@ -78,7 +90,7 @@ div#enviroPanelInner, div#econoPanelInner, div#energyPanelInner {
 	top:220px;*/
 
 	top:200px;
-	
+
 	-webkit-transform-style: preserve-3d;
 	transition: all .2s  ease-in-out;/**/
 }
@@ -142,11 +154,11 @@ top: 718px;
 }
 
 .colorbar {
-	position:relative; 
-	width:330px; 
-	height:12px; 
-	border-radius:6px; 
-	margin:30px auto; 
+	position:relative;
+	width:330px;
+	height:12px;
+	border-radius:6px;
+	margin:30px auto;
 }
 
 .colorbar h3 {
@@ -178,7 +190,7 @@ div#mapA, div#mapB, div#borderscrim {
 	position:absolute;
 }
 div#mapA {
-	background-image: url('../../bmp/currentpop.png');	
+	background-image: url('../../bmp/currentpop.png');
 }
 div#borderscrim {
 	background-image: url('../../bmp/borderandscrim.png');
