--- a/client/app/preview/preview.css
+++ b/client/app/preview/preview.css
@@ -73,7 +73,26 @@ div#hexMatrix {
 	z-index:0;
 
 }
-div#enviroPanelOuter, div#econoPanelOuter, div#energyPanelOuter {
+
+div.topPlane, div.bottomPlane {
+  position:absolute;
+  width:375px;
+  height:450px;
+  /*opacity:.2;*/
+}
+div.topPlane {
+  /*border:white solid 1px;*/
+  background:url("../../svg/paneltopA9.svg") 50% 0%  no-repeat;
+  -webkit-transform: translateZ(25px); /* Chrome, Safari, Opera */
+}
+
+div.bottomPlane {
+  /*border:blue solid 1px;*/
+  background:url("../../svg/panelbottom3.svg") 50% 0%    no-repeat;
+  -webkit-transform: translateZ(10px); /* Chrome, Safari, Opera */
+}
+
+div.panelOuterenvironment, div.panelOutereconomy, div.panelOuterenergy {
 	position:absolute;
 	width:375px;
 	height:300px;overflow:hidden;
@@ -82,7 +101,7 @@ div#enviroPanelOuter, div#econoPanelOuter, div#energyPanelOuter {
 	/*border:black solid 1px;*/
 	overflow:hidden;
 }
-div#enviroPanelInner, div#econoPanelInner, div#energyPanelInner {
+div.panelInnerEnvironment, div.panelInnerEconomy, div.panelInnerEnergy {
 	position:absolute;
 	width:375px;
 	height:350px;
@@ -94,60 +113,21 @@ div#enviroPanelInner, div#econoPanelInner, div#energyPanelInner {
 	-webkit-transform-style: preserve-3d;
 	transition: all .2s  ease-in-out;/**/
 }
-div#enviroPanelInner.extended, div#econoPanelInner.extended, div#energyPanelInner.extended {
+div.panelInnerEnvironment.extended, div.panelInnerEconomy.extended, div.panelInnerEnergy.extended {
 		top:0px;
 }
-div.topPlane, div.bottomPlane {
-	position:absolute;
-	width:375px;
-	height:450px;
-	/*opacity:.2;*/
-}
-div.topPlane {
-	/*border:white solid 1px;*/
-	background:url("../../svg/paneltopA9.svg") 50% 0%  no-repeat;
-	-webkit-transform: translateZ(25px); /* Chrome, Safari, Opera */
-}
 
-div.bottomPlane {
-	/*border:blue solid 1px;*/
-	background:url("../../svg/panelbottom3.svg") 50% 0%    no-repeat;
-	-webkit-transform: translateZ(10px); /* Chrome, Safari, Opera */
-}
-/*div#enviroPanelOuter {
-	left:300px;
-	top:650px;
-	-webkit-transform: rotateZ(35deg);
-}
-div#enviroPanelOuter {
-	left: 360px;
-	top: 695px;
-	-webkit-transform: rotateZ(29deg);
-}*/
-div#enviroPanelOuter {
+div.panelOuterenvironment {
 left: 360px;
 top: 718px;
 -webkit-transform: rotateZ(29deg);
 }
-div#econoPanelOuter {
+div.panelOutereconomy {
 	left:775px;
 	/*top:800px;*/
 	top:825px;
 }
-/*div#energyPanelOuter {
-	right:300px;
-	top:650px;
-	-webkit-transform: rotateZ(-35deg);
-
-}
-
-
-div#energyPanelOuter {
-	right: 355px;
-	top: 695px;
-	-webkit-transform: rotateZ(-29deg);
-}*/
-div#energyPanelOuter {
+div.panelOuterenergy {
 right: 355px;
 top: 718px;
 -webkit-transform: rotateZ(-29deg);
@@ -177,12 +157,12 @@ top: 718px;
 	font-family: "232MKSD", Helvetica, Arial, sans-serif;
 }
 
-div#enviroPanelOuter .colorbar { background:#2fd418; }
-div#econoPanelOuter .colorbar { background:#fca204; }
-div#energyPanelOuter .colorbar { background:#4e4efc; }
-div#enviroPanelOuter h3 { border:#c8e893 solid 1px; color:#c8e893; text-shadow: 0 0 3px #c8e893; }
-div#econoPanelOuter h3 { border:#fbcd6d solid 1px; color:#fbcd6d; }
-div#energyPanelOuter h3 { border:#a8aefa solid 1px; color:#a8aefa; }
+div.panelOuterenvironment.colorbar { background:#2fd418; }
+div.panelOutereconomy.colorbar { background:#fca204; }
+div.panelOuterenergy.colorbar { background:#4e4efc; }
+div.panelOuterenvironment h3 { border:#c8e893 solid 1px; color:#c8e893; text-shadow: 0 0 3px #c8e893; }
+div.panelOutereconomy h3 { border:#fbcd6d solid 1px; color:#fbcd6d; }
+div.panelOuterenergy h3 { border:#a8aefa solid 1px; color:#a8aefa; }
 
 div#mapA, div#mapB, div#borderscrim {
 	width:1920px;
