--- a/client/app/preview/preview.css
+++ b/client/app/preview/preview.css
@@ -157,12 +157,12 @@ top: 718px;
 	font-family: "232MKSD", Helvetica, Arial, sans-serif;
 }
 
-div.panelOuterenvironment.colorbar { background:#2fd418; }
-div.panelOutereconomy.colorbar { background:#fca204; }
-div.panelOuterenergy.colorbar { background:#4e4efc; }
-div.panelOuterenvironment h3 { border:#c8e893 solid 1px; color:#c8e893; text-shadow: 0 0 3px #c8e893; }
-div.panelOutereconomy h3 { border:#fbcd6d solid 1px; color:#fbcd6d; }
-div.panelOuterenergy h3 { border:#a8aefa solid 1px; color:#a8aefa; }
+.panelOuterenvironment .colorbar { background:#2fd418; }
+.panelOutereconomy .colorbar { background:#fca204; }
+.panelOuterenergy .colorbar { background:#4e4efc; }
+.panelOuterenvironment h3 { border:#c8e893 solid 1px; color:#c8e893; text-shadow: 0 0 3px #c8e893; }
+.panelOutereconomy h3 { border:#fbcd6d solid 1px; color:#fbcd6d; }
+.panelOuterenergy h3 { border:#a8aefa solid 1px; color:#a8aefa; }
 
 div#mapA, div#mapB, div#borderscrim {
 	width:1920px;
