--- a/client/app/playerPanel/playerPanel.css
+++ b/client/app/playerPanel/playerPanel.css
@@ -10,10 +10,29 @@
   margin-right:10px;
 }
 
+p.tab-body {
+  margin-left:25px;
+  margin-right:25px;
+}
+
 .tab-img {
   height:50%;
   width:50%;
   margin-left:45px;
+}
+
+.vote-buttons {
+  position:absolute;
+  left:40%;
+  top:50%;
+}
+
+.tab-img-vote {
+  height:30%;
+  width:30%;
+  margin-left:30px;
+  margin-right:15px;
+  float:left;
 }
 
 @charset "UTF-8";
