--- a/client/app/preview/preview.css
+++ b/client/app/preview/preview.css
@@ -8,6 +8,7 @@
 	padding:20px;
 	margin:10px;
   margin-top:375px;
+  /*transform: rotateZ(45deg);*/
 }
 
 .vote-block {
@@ -56,7 +57,21 @@
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
+@font-face {
+  font-family: 'Icons';
+  src: url('../../assets/fonts/open-iconic.svg#Icons') format('svg'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
 
+@font-face {
+  font-family: 'symbolsttf';
+  src: url('../../assets/fonts/open-iconic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
+
+#Layer_1 {
+  pointer-events: none;
+}
 
 body {
 	width:1920px;
