--- a/client/app/preview/preview.css
+++ b/client/app/preview/preview.css
@@ -1,14 +1,33 @@
-.scenario-card {
-	height:400px;
-  width: 600px;
-	/*border-radius:20px;
-  background-color:rgba(35,103,135,0.15);*/
-  background-color:rgba(0,0,0,0.03);
+.scenario-card-0 {
+	height:250px;
+  width: 550px;
+	border-radius:20px;
+  background-color:rgba(0,0,0,0.25);
 	color:white;
 	padding:20px;
 	margin:10px;
   margin-top:375px;
-  /*transform: rotateZ(45deg);*/
+  transform: perspective(1000px) rotateY(25deg);
+  transform-style: preserve-3d;
+  float:left;
+  position:relative;
+  margin-left:00px;
+}
+
+.scenario-card-1 {
+  height:250px;
+  width: 550px;
+  border-radius:20px;
+  background-color:rgba(0,0,0,0.25);
+  color:white;
+  padding:20px;
+  margin:10px;
+  margin-top:375px;
+  transform: perspective(1000px) rotateY(-25deg);
+  transform-style: preserve-3d;
+  float:left;
+  position:relative;
+  margin-left:-70px;
 }
 
 .vote-block {
@@ -25,8 +44,10 @@
 
 .scenario-icon {
   width:30%;
-  height:auto;
-  margin-left:10%;
+  height:100%;
+  float:left;
+  margin-right:5%;
+  margin-left:0%;
 }
 
 #box-wrap-inner {
