--- a/client/app/app.less
+++ b/client/app/app.less
@@ -1,23 +1,15 @@
+@import (reference) "vars.less";
 
 
-/**
- *Font Awesome Fonts
- */
 
-@font-face {
-    font-family: 'FontAwesome';
-    src: url('../bower_components/font-awesome/fonts/fontawesome-webfont.eot?v=4.1.0');
-    src: url('../bower_components/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.1.0') format('embedded-opentype'),
-    url('../bower_components/font-awesome/fonts/fontawesome-webfont.woff?v=4.1.0') format('woff'),
-    url('../bower_components/font-awesome/fonts/fontawesome-webfont.ttf?v=4.1.0') format('truetype'),
-    url('../bower_components/font-awesome/fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-} 
- 
 /**
  * App-wide Styles
  */
+
+h1,h2,h3,h4,h5,h6{
+  .euro-extended;
+}
+
 
 .browsehappy {
     margin: 0.2em 0;
@@ -46,7 +38,7 @@
 }
 
 .relative {
-	
+
 	position: relative;
 }
 
