--- a/client/app/playerPanel/playerPanel.css
+++ b/client/app/playerPanel/playerPanel.css
@@ -1,89 +1,114 @@
+@charset "UTF-8";
+.bottomPlane {
+  padding-left: 3em;
+  padding-right: 3em;
+}
 .tab-title {
-  font-family: '232MKB';
-  color:white;
-  margin-top:80px;
-  margin-left:75px;
+  font-family: 'eurostile-condensed';
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.9), -2px 4px 4px black;
+  color: #21ffff;
 }
-
 .tab-body {
-  font-family: '232MKUL';
-  color:white;
-  margin-left:10px;
-  margin-right:10px;
+  font-family: 'eurostile-condensed';
+  color: white;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-
 p.tab-body {
-  margin-left:25px;
-  margin-right:25px;
-  font-size:12px;
+  margin-left: 25px;
+  margin-right: 25px;
+  font-size: 12px;
 }
-
 .tab-img {
-  height:50%;
-  width:50%;
-  margin-left:45px;
+  height: 50%;
+  width: 50%;
+  margin-left: 45px;
 }
-
 .btn-icon {
-  background:url("../../svg/buttonOL.svg") 50% 50% no-repeat;
-  width:100px;
-  height:50px;
-  padding:35px;
-  margin:10px;
+  background: url("../../svg/buttonOL.svg") 50% 50% no-repeat;
+  width: 100px;
+  height: 50px;
+  padding: 35px;
+  margin: 10px;
 }
-
-.btn-icon.economy {
-   color: #fca204;
- }
-
-.btn-icon.energy {
-  color: #5a94fc;
-}
-
-.btn-icon.environment {
+.environment i,
+.environment a {
   color: #2fd418;
 }
-
+.environment .colorbar {
+  background-color: #41bc30;
+}
+.energy i,
+.energy a {
+  color: #4e4efc;
+}
+.energy .colorbar {
+  background-color: #6060ea;
+}
+.economy i,
+.economy a {
+  color: #fca204;
+}
+.economy .colorbar {
+  background-color: #e39b1d;
+}
+/*.panelOuterenvironment .colorbar { background:#2fd418; }
+.panelOutereconomy .colorbar { background:#fca204; }
+.panelOuterenergy .colorbar { background:#4e4efc; } */
+.panelOuterenvironment h3 {
+  border: #c8e893 solid 1px;
+  color: #c8e893;
+  text-shadow: 0 0 3px #c8e893;
+}
+.panelOutereconomy h3 {
+  border: #fbcd6d solid 1px;
+  color: #fbcd6d;
+}
+.panelOuterenergy h3 {
+  border: #a8aefa solid 1px;
+  color: #a8aefa;
+}
 .vote-buttons {
-  position:absolute;
-  left:15%;
-  top:47%;
+  position: absolute;
+  left: 15%;
+  top: 47%;
 }
-
 .tab-img-vote {
-  height:30%;
-  width:30%;
-  margin-left:30px;
-  margin-right:15px;
-  float:left;
+  height: 30%;
+  width: 30%;
+  margin-left: 30px;
+  margin-right: 15px;
+  float: left;
 }
-
-.panelInnerEnvironment, .panelInnerEconomy, .panelInnerEnergy {
-  position:absolute;
-  width:375px;
-  height:350px;
+.panelInnerEnvironment,
+.panelInnerEconomy,
+.panelInnerEnergy {
+  position: absolute;
+  width: 375px;
+  height: 350px;
   /*top:0px;
 top:220px;*/
-
-  top:200px;
-
+  top: 200px;
   -webkit-transform-style: preserve-3d;
-  transition: all .2s  ease-in-out;/**/
+  transition: all 0.2s ease-in-out;
+  /**/
 }
-.panelInnerenvironment .extended, .panelInnereconomy .extended, .panelInnerenergy .extended {
-  top:0px;
+.panelInnerenvironment .extended,
+.panelInnereconomy .extended,
+.panelInnerenergy .extended {
+  top: 0px;
 }
-
-@charset "UTF-8";
-
 @font-face {
   font-family: '232MKB';
-  src: url('../../assets/fonts/232MKSD_winTT/232MKB__.TTF') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  src: url('../../assets/fonts/232MKSD_winTT/232MKB__.TTF') format('truetype');
+  
+  /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
-
 @font-face {
   font-family: '232MKUL';
-  src: url('../../assets/fonts/232MKSD_winTT/232MKUL_.TTF') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  src: url('../../assets/fonts/232MKSD_winTT/232MKUL_.TTF') format('truetype');
+  
+  /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
