--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -58,6 +58,10 @@
   -webkit-box-pack: center;
   -moz-box-pack: center;
   box-pack: center;
+
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 @charset "UTF-8";
