--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -23,13 +23,14 @@
   -webkit-flex: auto;
   height: 250px;
   width: 550px;
-  border-radius: 20px;
-  background-color: rgba(0, 0, 0, 0.25);
+  /*border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.25);*/
   color: white;
   padding: 20px;
   margin: 10px;
   transform-style: preserve-3d;
   margin-left: 0;
+  background: url("../../svg/infoPanel.svg") 50% 50% no-repeat;
 }
 .scenario-card:nth-of-type(1) {
   transform: perspective(1000px) rotateY(25deg) translate(50px);
@@ -44,14 +45,14 @@
 @font-face {
   font-family: '232MKB';
   src: url('../../assets/fonts/232MKSD_winTT/232MKB__.TTF') format('truetype');
-  
+
   /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 @font-face {
   font-family: '232MKUL';
   src: url('../../assets/fonts/232MKSD_winTT/232MKUL_.TTF') format('truetype');
-  
+
   /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
